--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,8 @@
     <title>Projeto</title>
 </head>
 <body>
-    <script>
-        console.log("ola mundo");
-        console.log("é o poder da ragatanga");
+    <script src="script1.js"></script>
+       
     </script>
 </body>
 </html>
